--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div class="container">
+
+        <div class="currency-box">
+            
+        </div>
+
+        
+
+    </div>
     <script src="main.js"></script>
 </body>
 </html>
