--- a/index.html
+++ b/index.html
@@ -11,7 +11,14 @@
     <div class="container">
 
         <div class="currency-box">
-            
+            <div class="dropdown">
+                <button class="dropbtn">USD</button>
+                <div class="dropdown-content">
+                  <a href="#">USD</a>
+                  <a href="#">KRW</a>
+                  <a href="#">VND</a>
+                </div>
+            </div>
         </div>
 
         
