--- a/index.html
+++ b/index.html
@@ -12,16 +12,31 @@
 
         <div class="currency-box">
             <div class="dropdown">
-                <button class="dropbtn">USD</button>
+                <button class="dropbtn">
+                    <span class="unit">USD</span>
+                </button>
                 <div class="dropdown-content">
                   <a href="#">USD</a>
                   <a href="#">KRW</a>
                   <a href="#">VND</a>
                 </div>
+                <input type="text" class="currency-input">
             </div>
         </div>
 
-        
+        <div class="currency-box">
+            <div class="dropdown">
+                <button class="dropbtn">
+                    <span class="unit">USD</span>
+                </button>
+                <div class="dropdown-content">
+                  <a href="#">USD</a>
+                  <a href="#">KRW</a>
+                  <a href="#">VND</a>
+                </div>
+                <input type="text" class="currency-input">
+            </div>
+        </div>
 
     </div>
     <script src="main.js"></script>
