--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
 <body>
     <div class="container">
 
+        <div class="currency-box">
+            <div class="dropdown">
+                <button class="dropbtn">USD</button>
+                <div class="dropdown-content">
+                    <a href="#">USD</a>
+                    <a href="#">KRW</a>
+                    <a href="#">VND</a>
+                </div>
+            </div>
+            <div class="input-box">
+                <input type="text" class="amount-box">
+                <div class="result from-result">달러</div>
+            </div>
+        </div>
         
+        <span class="equal-sign">=</span>
+
+        <div class="currency-box">
+            <div class="dropdown">
+                <button class="dropbtn">USD</button>
+                <div class="dropdown-content">
+                    <a href="#">USD</a>
+                    <a href="#">KRW</a>
+                    <a href="#">VND</a>
+                </div>
+            </div>
+            <div class="input-box">
+                <input type="text" class="amount-box">
+                <div class="result to-result">달러</div>
+            </div>
+        </div>
 
     </div>
     <script src="main.js"></script>
