--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="currency-box">
             <div class="dropdown">
                 <button class="dropbtn">USD</button>
-                <div class="dropdown-content">
+                <div class="dropdown-content from-menu">
                     <a href="#">USD</a>
                     <a href="#">KRW</a>
                     <a href="#">VND</a>
@@ -30,7 +30,7 @@
         <div class="currency-box">
             <div class="dropdown">
                 <button class="dropbtn">USD</button>
-                <div class="dropdown-content">
+                <div class="dropdown-content to-menu">
                     <a href="#">USD</a>
                     <a href="#">KRW</a>
                     <a href="#">VND</a>
