--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
+	<link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -66,7 +67,7 @@
 
 		<!-- 푸터 -->
 		<footer>
-			<p>푸터 영역</p>
+			<p>This is the footer</p>
 		</footer>
 	</div>
 	<!-- / 컨테이너 -->
