--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 				<!-- 환전 div 1-->
 				<div class="currency-box">
 					<div class="dropdown">
-						<button class="dropbtn">USD</button>
-						<div class="dropdown-content">
+						<button class="dropbtn" id="from-button">USD</button>
+						<div class="dropdown-content" id="from-currency-list">
 							<a href="#">USD</a>
 							<a href="#">KRW</a>
 							<a href="#">VND</a>
@@ -47,8 +47,8 @@
 				<!-- 환전 div 2-->
 				<div class="currency-box">
 					<div class="dropdown">
-						<button class="dropbtn">USD</button>
-						<div class="dropdown-content">
+						<button class="dropbtn" id="to-button">USD</button>
+						<div class="dropdown-content" id="to-currency-list">
 							<a href="#">USD</a>
 							<a href="#">KRW</a>
 							<a href="#">VND</a>
@@ -72,6 +72,6 @@
 	</div>
 	<!-- / 컨테이너 -->
 	
-	
+	<script src="main.js"></script>
 </body>
 </html>
