--- a/test.html
+++ b/test.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>환전 계산기</title>
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
 
@@ -14,34 +15,34 @@
 
         <div class="exchange-box">
             <div class="dropdown">
-                <button class="dropdown-btn">USD</button>
-                <div class="dropdown-content">
+                <button class="dropdown-btn from-btn">USD</button>
+                <div class="dropdown-list from-list">
                     <a href="#">USD</a>
 					<a href="#">KRW</a>
 					<a href="#">VND</a>
                 </div>
             </div>
-            <input type="text" class="input-from">
-            <div class="result-from"></div>
+            <input type="text" class="from-input">
+            <div class="result from-result"></div>
         </div>
 
         <div class="exchange-box">
             <div class="dropdown">
-                <button class="dropdown-btn">USD</button>
-                <div class="dropdown-content">
+                <button class="dropdown-btn to-btn">KRW</button>
+                <div class="dropdown-list to-list">
                     <a href="#">USD</a>
 					<a href="#">KRW</a>
 					<a href="#">VND</a>
                 </div>
             </div>
-            <input type="text" class="input-to">
-            <div class="result-to"></div>
+            <input type="text" class="to-input">
+            <div class="result to-result"></div>
         </div>
 
         <div class="exchange-to">
 
         </div>
     </div>
-
+    <script src="js/app.js"></script>
 </body>
 </html>
